shrunk video height to 1074px to prevent scrollbars, changed help text to #555

--- a/css/player.css
+++ b/css/player.css
@@ -11,5 +11,5 @@ body {
 
 .playerwrap video {
 	width:1920px;
-	height:1076px;
+	height:1074px;
 }
