--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,6 @@ li {
 	margin-top: 35px;
 	font-size: 60px;
 	font-family: "Franklin Gothic Demi", Helvetica, Arial;
-	color: #fff;
+	color: #555;
 	text-align: center;
 }
